# fastpg

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  sitemap.xml
.github/workflows/: ci.yml
api/database-models/: index.html
api/queries/: index.html
docs/: getting-started.md  index.md  installation.md  quickstart.md
docs/api/: database-models.md  queries.md
docs/examples/: advanced-usage.md  basic-usage.md
docs/guides/: models.md  pagination.md  querysets.md  relationships.md  transactions.md
docs/reference/: constants.md  errors.md  json-fields.md  preprocessors.md  settings.md
docs/stylesheets/: hacker.css
examples/advanced-usage/: index.html
examples/basic-usage/: index.html
getting-started/: index.html
guides/models/: index.html
guides/pagination/: index.html
guides/querysets/: index.html
guides/relationships/: index.html
guides/transactions/: index.html
reference/constants/: index.html
reference/errors/: index.html
reference/json-fields/: index.html
reference/preprocessors/: index.html
reference/settings/: index.html
search/: search_index.json
src/fastpg/: __init__.py  constants.py  core.py  db.py  errors.py  fastpg.py  fields.py  paginator.py  preprocessors.py  utils.py
test_project/: docker-compose.yml  docker.sh  requirements.txt  secrets.env
test_project/app/: main.py  shell.py
test_project/app/api/: api.py
test_project/app/api/endpoints/: shop_api.py
test_project/app/schemas/: shop.py
test_project/app/utils/: color_print.py
test_project/dockerify/: Dockerfile
test_project/dockerify/db/: extensions.sql
test_project/dockerify/db/pg13/: Dockerfile  Dockerfile.readonly  Dockerfile.replica  init-replication.sh  init.sql  readonly.sql  replica-entrypoint.sh  replication.sh  setup-replica.sh  setup-replication.sh
test_project/fastpg/: __init__.py  constants.py  core.py  db.py  errors.py  fastpg.py  fields.py  paginator.py  print.py  utils.py
tests/: conftest.py  test_db_connection.py  test_db_connection_manager.py  test_fastpg_registry.py  test_fields.py  test_paginator.py  test_preprocessors.py  test_queryset.py  test_sql_logger.py  test_utils.py
workflow/: docs.yml
