[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpg"
version = "0.1.0"
description = "A light wieght ORM for FastAPI projects and Postgresql"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eshan Das", email = "eshan@logisy.tech"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "psycopg2>=2.9.10",
    "databases[postgresql]>=0.7.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/bepragma-ai/fastpg"
Repository = "https://github.com/bepragma-ai/fastpg"
Issues = "https://github.com/bepragma-ai/fastpg/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"