[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpg"
dynamic = ["version"]
description = "Lightweight async ORM for PostgreSQL and FastAPI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Eshan Das", email = "eshan@logisy.tech"}
]
requires-python = ">=3.8"
dependencies = [
    "databases[postgresql]>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/bepragma-ai/fastpg"
Repository = "https://github.com/bepragma-ai/fastpg"
Issues = "https://github.com/bepragma-ai/fastpg/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
write_to = "src/fastpg/_version.py"
